# shizuku-companion

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/adb/: Setup.iss
src/: lib.rs  main.rs  program_code.rs
